Refactor Student_GPA notebook: added data loading, preprocessing, model training, and evaluation steps. Updated execution counts and outputs for clarity.

--- a/Q2/notebook/Student_GPA.ipynb
+++ b/Q2/notebook/Student_GPA.ipynb
@@ -75,12 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 154,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -89,17 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset shape: (1913, 14)\n",
+      "Test dataset shape: (479, 13)\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# Reading/Loading the dataset files\n",
-    "# TODO\n",
-    "\n"
+    "from pathlib import Path\n",
+    "\n",
+    "# Reading the dataset files\n",
+    "MAIN_DATA_DIR = Path('../data')\n",
+    "train_df = pd.read_csv(MAIN_DATA_DIR / 'train.csv')\n",
+    "test_df = pd.read_csv(MAIN_DATA_DIR / 'test.csv')\n",
+    "\n",
+    "TARGET = 'GPA'\n",
+    "X = train_df.drop(columns=[TARGET])\n",
+    "y = train_df[TARGET]\n",
+    "\n",
+    "# Print the shape of the training and test datasets \n",
+    "print(f'Train dataset shape: {train_df.shape}\\nTest dataset shape: {test_df.shape}')\n"
    ]
   },
   {
@@ -120,16 +131,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numeric features: 9 \n",
+      "Categorical features: 3\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Preprocessing step\n",
-    "# TODO"
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Remove identifier from features cz it's not a feature\n",
+    "feature_columns = [c for c in X.columns if c != 'StudentID']\n",
+    "\n",
+    "# Separate numeric and categorical features for better preprocessing\n",
+    "numeric_features = X[feature_columns].select_dtypes(include=['number']).columns.tolist()\n",
+    "categorical_features = [c for c in feature_columns if c not in numeric_features]\n",
+    "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median'))\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "    ('encoder', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)\n",
+    "    ],\n",
+    "    remainder='drop'\n",
+    ")\n",
+    "\n",
+    "print(f'Numeric features: {len(numeric_features)} \\nCategorical features: {len(categorical_features)}')"
    ]
   },
   {
@@ -147,16 +192,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model trained on training split.\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Model design\n",
-    "# TODO"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Hold-out validation split based on 20% of the training data for evaluation\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X[feature_columns], y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Build pipeline with preprocessor and random forest regressor\n",
+    "model = Pipeline(steps=[\n",
+    "    ('preprocess', preprocessor),\n",
+    "    ('rf', RandomForestRegressor(\n",
+    "        n_estimators=500,\n",
+    "        max_depth=None,\n",
+    "        min_samples_split=2,\n",
+    "        min_samples_leaf=1,\n",
+    "        n_jobs=-1,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "print('Model trained on training split.')"
    ]
   },
   {
@@ -186,18 +258,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation R2: 0.9233\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
+    "\n",
     "# evaluate your model\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "# To-Do"
+    "y_valid_pred = model.predict(X_valid)\n",
+    "r2 = r2_score(y_valid, y_valid_pred)\n",
+    "print(f'Validation R2: {r2:.4f}')\n",
+    "\n",
+    "# Ensure threshold guidance is visible\n",
+    "if r2 < 0.4:\n",
+    "    print('Warning: R2 below 0.4 threshold. Consider tuning or trying another model.')"
    ]
   },
   {
@@ -237,16 +320,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------\n",
+      "        GPA\n",
+      "0  1.265554\n",
+      "1  3.031956\n",
+      "2  1.824635\n",
+      "3  3.447805\n",
+      "4  0.514094\n",
+      "\n",
+      "Submission shape: (479, 1)\n",
+      "----------\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# To-Do\n",
-    "submission ="
+    "# Refit on full training data (using same preprocessing)\n",
+    "final_model = Pipeline(steps=[\n",
+    "    ('preprocess', preprocessor),\n",
+    "    ('rf', RandomForestRegressor(\n",
+    "        n_estimators=500,\n",
+    "        max_depth=None,\n",
+    "        min_samples_split=2,\n",
+    "        min_samples_leaf=1,\n",
+    "        n_jobs=-1,\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "final_model.fit(X[feature_columns], y)\n",
+    "\n",
+    "# Predict on test data\n",
+    "test_pred = final_model.predict(test_df[feature_columns])\n",
+    "submission = pd.DataFrame({'GPA': test_pred})\n",
+    "print(\"-\"*10)\n",
+    "print( submission.head())\n",
+    "print('\\nSubmission shape:', submission.shape)\n",
+    "print(\"-\"*10)\n"
    ]
   },
   {
@@ -266,13 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Paths:\n",
+      "['Student_GPA.ipynb', 'submission.csv']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import zipfile\n",
     "import os\n",
@@ -304,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
