Update crime_detection notebook: increment execution counts, add output messages for data directory, feature extraction, training data summary, model details, and cross-validation results.

--- a/Q3/notebook/crime_detection.ipynb
+++ b/Q3/notebook/crime_detection.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data directory found: /Users/taher/Projects/data-processing–preliminary  /Q3/notebook/../data\n"
+     ]
+    }
+   ],
    "source": [
     "# Locate data directory \n",
     "possible_data_dirs = [\n",
@@ -227,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features are extracted and cleaned\n"
+     ]
+    }
+   ],
    "source": [
     "# now lets define the function to build the features out of the training data\n",
     "\n",
@@ -295,9 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data has 84113 rows\n",
+      "Test data has 9346 rows\n",
+      "Combined data has 93459 rows\n"
+     ]
+    }
+   ],
    "source": [
     "# Separate target\n",
     "y = train_df[target_col].astype(int)\n",
@@ -339,9 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(class_weight='balanced', min_samples_leaf=2,\n",
+      "                       n_estimators=400, n_jobs=-1, random_state=42)\n"
+     ]
+    }
+   ],
    "source": [
     "# Train and predict phase yes\n",
     "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
@@ -372,11 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "w36rHxW0qE6J"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV F1-macro (3-fold): mean=0.519, std=0.001\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Optional - quick CV to gauge F1-macro\n",
@@ -420,11 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "T9jRlQwUiSdz"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Paths:\n",
+      "['crime_detection.ipynb', 'submission.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import zipfile\n",
