Enhance crime_detection notebook: add markdown sections for setup, data loading, feature engineering, and submission builder; increment execution counts; include detailed output messages for data shapes, missingness, target distribution, feature importances, and model parameters.

--- a/Q3/notebook/crime_detection.ipynb
+++ b/Q3/notebook/crime_detection.ipynb
@@ -174,8 +174,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup and Imports\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,8 +198,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (84113, 27)\n",
+      "Test shape: (9346, 21)\n",
+      "\n",
+      "Top-10 missingness (train):\n",
+      " Crm Cd 4          0.999964\n",
+      "Crm Cd 3          0.998966\n",
+      "Crm Cd 2          0.937168\n",
+      "Cross Street      0.819243\n",
+      "Weapon Desc       0.646654\n",
+      "Weapon Used Cd    0.646654\n",
+      "Mocodes           0.163411\n",
+      "Vict Descent      0.160796\n",
+      "Vict Sex          0.160784\n",
+      "Premis Desc       0.000369\n",
+      "dtype: float64\n",
+      "\n",
+      "Top-10 missingness (test):\n",
+      " Cross Street      0.827841\n",
+      "Weapon Desc       0.649155\n",
+      "Weapon Used Cd    0.649155\n",
+      "Mocodes           0.164883\n",
+      "Vict Descent      0.162208\n",
+      "Vict Sex          0.162208\n",
+      "Premis Desc       0.000321\n",
+      "LAT               0.000000\n",
+      "LOCATION          0.000000\n",
+      "Status Desc       0.000000\n",
+      "dtype: float64\n",
+      "\n",
+      "Target distribution (top 15):\n",
+      "Crm Cd\n",
+      "510    11214\n",
+      "624     8829\n",
+      "330     6951\n",
+      "740     6937\n",
+      "310     6787\n",
+      "230     6189\n",
+      "440     5771\n",
+      "626     5755\n",
+      "420     5243\n",
+      "354     5057\n",
+      "210     3776\n",
+      "745     3751\n",
+      "341     2993\n",
+      "331     2563\n",
+      "930     2297\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quick EDA: shapes and missingness\n",
+    "print(\"Train shape:\", train_df.shape)\n",
+    "print(\"Test shape:\", test_df.shape)\n",
+    "\n",
+    "# Basic missingness\n",
+    "missing_train = train_df.isna().mean().sort_values(ascending=False).head(10)\n",
+    "missing_test = test_df.isna().mean().sort_values(ascending=False).head(10)\n",
+    "print(\"\\nTop-10 missingness (train):\\n\", missing_train)\n",
+    "print(\"\\nTop-10 missingness (test):\\n\", missing_test)\n",
+    "\n",
+    "# Target distribution (top 15 most frequent)\n",
+    "if target_col in train_df.columns:\n",
+    "    print(\"\\nTarget distribution (top 15):\")\n",
+    "    print(train_df[target_col].value_counts().head(15))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +325,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (84113, 25)\n",
+      "X_test shape: (9346, 25)\n",
+      "\n",
+      "Selected engineered feature summary (train):\n",
+      "                  count         mean       std     min     25%     50%  \\\n",
+      "TIME_OCC_HOUR   84113.0    13.423204  6.523232     0.0     9.0    14.0   \n",
+      "Date Rptd_YEAR  84113.0  2020.055746  0.317548  2020.0  2020.0  2020.0   \n",
+      "DATE OCC_YEAR   84113.0  2020.000000  0.000000  2020.0  2020.0  2020.0   \n",
+      "\n",
+      "                   75%     max  \n",
+      "TIME_OCC_HOUR     19.0    23.0  \n",
+      "Date Rptd_YEAR  2020.0  2024.0  \n",
+      "DATE OCC_YEAR   2020.0  2020.0  \n",
+      "\n",
+      "First 5 feature columns:\n",
+      "['TIME OCC', 'AREA', 'AREA NAME', 'Rpt Dist No', 'Vict Age']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature matrix summary after encoding\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)\n",
+    "\n",
+    "# Numeric summary for a few key engineered columns if present\n",
+    "cols_to_show = [c for c in ['TIME_OCC_HOUR','Date Rptd_YEAR','DATE OCC_YEAR'] if c in X_train.columns]\n",
+    "if cols_to_show:\n",
+    "    print(\"\\nSelected engineered feature summary (train):\")\n",
+    "    print(X_train[cols_to_show].describe().T)\n",
+    "\n",
+    "print(\"\\nFirst 5 feature columns:\")\n",
+    "print(list(X_train.columns[:5]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +450,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Train/Test Matrices\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report (macro average emphasized):\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         210      0.628     0.389     0.480      3776\n",
+      "         230      0.692     0.794     0.739      6189\n",
+      "         310      0.549     0.649     0.595      6787\n",
+      "         330      0.478     0.738     0.580      6951\n",
+      "         331      0.316     0.208     0.250      2563\n",
+      "         341      0.278     0.077     0.121      2993\n",
+      "         354      0.560     0.736     0.636      5057\n",
+      "         420      0.333     0.073     0.119      5243\n",
+      "         440      0.407     0.446     0.426      5771\n",
+      "         510      0.829     0.986     0.901     11214\n",
+      "         624      0.678     0.769     0.721      8829\n",
+      "         626      0.657     0.714     0.685      5755\n",
+      "         740      0.519     0.462     0.489      6937\n",
+      "         745      0.275     0.095     0.141      3751\n",
+      "         930      0.918     0.898     0.908      2297\n",
+      "\n",
+      "    accuracy                          0.605     84113\n",
+      "   macro avg      0.541     0.535     0.519     84113\n",
+      "weighted avg      0.572     0.605     0.573     84113\n",
+      "\n",
+      "\n",
+      "Confusion matrix shape: (15, 15)\n",
+      "Labels order: [210, 230, 310, 330, 331, 341, 354, 420, 440, 510] ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross-validated diagnostics: classification report and confusion matrix\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Use the same CV splitter\n",
+    "cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
+    "y_pred_cv = cross_val_predict(clf, X_train, y, cv=cv, n_jobs=-1)\n",
+    "\n",
+    "print(\"Classification report (macro average emphasized):\\n\")\n",
+    "print(classification_report(y, y_pred_cv, digits=3))\n",
+    "\n",
+    "cm = confusion_matrix(y, y_pred_cv, labels=np.unique(y))\n",
+    "print(\"\\nConfusion matrix shape:\", cm.shape)\n",
+    "print(\"Labels order:\", list(np.unique(y))[:10], \"...\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -365,15 +568,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier(class_weight='balanced', min_samples_leaf=2,\n",
-      "                       n_estimators=400, n_jobs=-1, random_state=42)\n"
+      "Top-20 feature importances:\n",
+      "\n",
+      "Weapon Used Cd     0.101431\n",
+      "Weapon Desc        0.089801\n",
+      "MOCODES_COUNT      0.080005\n",
+      "Premis Cd          0.072522\n",
+      "Vict Age           0.057535\n",
+      "LAT                0.052235\n",
+      "LON                0.051947\n",
+      "Premis Desc        0.048943\n",
+      "Rpt Dist No        0.047628\n",
+      "TIME OCC           0.046125\n",
+      "DATE OCC_DAY       0.039181\n",
+      "Date Rptd_DAY      0.038897\n",
+      "TIME_OCC_HOUR      0.032744\n",
+      "DATE OCC_MONTH     0.029500\n",
+      "Date Rptd_MONTH    0.029377\n",
+      "Vict Sex           0.028299\n",
+      "Vict Descent       0.027430\n",
+      "DATE OCC_DOW       0.026056\n",
+      "Date Rptd_DOW      0.026052\n",
+      "AREA NAME          0.023074\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature importance (top 20)\n",
+    "# Fit once on full training for importances\n",
+    "clf.fit(X_train, y)\n",
+    "importances = getattr(clf, 'feature_importances_', None)\n",
+    "if importances is not None:\n",
+    "    fi = pd.Series(importances, index=X_train.columns).sort_values(ascending=False).head(20)\n",
+    "    print(\"Top-20 feature importances:\\n\")\n",
+    "    print(fi)\n",
+    "else:\n",
+    "    print(\"Model does not expose feature_importances_.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Definition\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trees: 400\n",
+      "Depth of the trees: None\n",
+      "Number of features considered for each split: sqrt\n",
+      "Number of samples in each leaf: 2\n"
      ]
     }
    ],
@@ -395,9 +655,15 @@
     "    random_state=42,\n",
     ") \n",
     "\n",
-    "# Print the model parameters \n",
-    "print(clf)\n",
+    "# Print the model parameters the number of trees, the depth of the trees, the number of features considered for each split, and the number of samples in each leaf\n",
+    "print(f\"Number of trees: {clf.n_estimators}\")\n",
+    "print(f\"Depth of the trees: {clf.max_depth}\")\n",
+    "print(f\"Number of features considered for each split: {clf.max_features}\")\n",
+    "print(f\"Number of samples in each leaf: {clf.min_samples_leaf}\")\n",
     "\n",
+    "\n",
+    "# For test\n",
+    "# print(clf)\n",
     "# Print the model summary\n",
     "# print(clf.get_params())\n",
     " \n",
@@ -406,8 +672,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross-Validation and Training\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {
     "id": "w36rHxW0qE6J"
    },
@@ -443,6 +716,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission Builder\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "B7PgaLKdiSdz"
    },
@@ -463,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {
     "id": "T9jRlQwUiSdz"
    },
