Update movement_status notebook: reset execution counts, enhance output messages, and modify submission.csv values for improved accuracy and clarity.

--- a/Q4/notebook/movement_status.ipynb
+++ b/Q4/notebook/movement_status.ipynb
@@ -60,8 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:21:37.706880Z",
+     "iopub.status.busy": "2025-09-26T17:21:37.706750Z",
+     "iopub.status.idle": "2025-09-26T17:22:42.932329Z",
+     "shell.execute_reply": "2025-09-26T17:22:42.932061Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -81,8 +88,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:42.933753Z",
+     "iopub.status.busy": "2025-09-26T17:22:42.933627Z",
+     "iopub.status.idle": "2025-09-26T17:22:43.135084Z",
+     "shell.execute_reply": "2025-09-26T17:22:43.134810Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -135,14 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:43.147939Z",
+     "iopub.status.busy": "2025-09-26T17:22:43.147848Z",
+     "iopub.status.idle": "2025-09-26T17:22:43.987390Z",
+     "shell.execute_reply": "2025-09-26T17:22:43.987157Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test rows: 90229, window_size: 362, windows: 249, remainder dropped: 91\n",
+      "Test rows: 90229, window_size: 362, windows: 249, remainder dropped: 91\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Train windows: (747, 75) Labels: (747,)\n",
       "X_train: (597, 75) X_val: (150, 75)\n"
      ]
@@ -257,8 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:43.988521Z",
+     "iopub.status.busy": "2025-09-26T17:22:43.988448Z",
+     "iopub.status.idle": "2025-09-26T17:22:44.326403Z",
+     "shell.execute_reply": "2025-09-26T17:22:44.326158Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,8 +343,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:44.327460Z",
+     "iopub.status.busy": "2025-09-26T17:22:44.327393Z",
+     "iopub.status.idle": "2025-09-26T17:22:44.357902Z",
+     "shell.execute_reply": "2025-09-26T17:22:44.357680Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -379,8 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:44.358991Z",
+     "iopub.status.busy": "2025-09-26T17:22:44.358935Z",
+     "iopub.status.idle": "2025-09-26T17:22:44.651672Z",
+     "shell.execute_reply": "2025-09-26T17:22:44.651436Z"
+    },
     "id": "j3exyIeeLIDS"
    },
    "outputs": [
@@ -389,6 +436,7 @@
      "output_type": "stream",
      "text": [
       "Test windows: (249, 75)\n",
+      "Submission rows: 90229\n",
       "   label\n",
       "0      7\n",
       "1      7\n",
@@ -404,8 +452,28 @@
     "X_test, _ = build_windows_features(test_df, WINDOW_SIZE, NUM_TEST_WINDOWS, with_labels=False)\n",
     "print('Test windows:', X_test.shape)\n",
     "\n",
-    "y_test_pred = rf.predict(X_test)\n",
-    "submission = pd.DataFrame({'label': y_test_pred.astype(int)})\n",
+    "# Predict per-window labels\n",
+    "y_test_pred = rf.predict(X_test).astype(int)\n",
+    "\n",
+    "# Expand window predictions to per-row labels\n",
+    "num_rows = len(test_df)\n",
+    "row_labels = np.empty(num_rows, dtype=int)\n",
+    "for i in range(NUM_TEST_WINDOWS):\n",
+    "    start = i * WINDOW_SIZE\n",
+    "    end = start + WINDOW_SIZE\n",
+    "    row_labels[start:end] = int(y_test_pred[i])\n",
+    "\n",
+    "# Handle remainder rows by predicting on the final partial window\n",
+    "remainder = num_rows - WINDOW_SIZE * NUM_TEST_WINDOWS\n",
+    "if remainder > 0:\n",
+    "    leftover_df = test_df.iloc[WINDOW_SIZE * NUM_TEST_WINDOWS:]\n",
+    "    leftover_feats = window_features(leftover_df)\n",
+    "    leftover_X = pd.DataFrame([leftover_feats]).reindex(columns=X_test.columns, fill_value=0.0)\n",
+    "    leftover_pred = int(rf.predict(leftover_X)[0])\n",
+    "    row_labels[-remainder:] = leftover_pred\n",
+    "\n",
+    "submission = pd.DataFrame({'label': row_labels.astype(int)})\n",
+    "print('Submission rows:', len(submission))\n",
     "print(submission.head())"
    ]
   },
@@ -426,8 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-09-26T17:22:44.652800Z",
+     "iopub.status.busy": "2025-09-26T17:22:44.652725Z",
+     "iopub.status.idle": "2025-09-26T17:22:44.669574Z",
+     "shell.execute_reply": "2025-09-26T17:22:44.669332Z"
+    },
     "id": "KT328lYmrM09"
    },
    "outputs": [
@@ -481,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
