Update movement_status notebook: enhance output messages for clarity and downgrade Python version for compatibility.

--- a/Q4/notebook/movement_status.ipynb
+++ b/Q4/notebook/movement_status.ipynb
@@ -163,13 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test rows: 90229, window_size: 362, windows: 249, remainder dropped: 91\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Test rows: 90229, window_size: 362, windows: 249, remainder dropped: 91\n",
       "Train windows: (747, 75) Labels: (747,)\n",
       "X_train: (597, 75) X_val: (150, 75)\n"
      ]
@@ -555,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
