Remove outdated result files and submission data from startup and Jajiga notebooks for improved project organization and clarity.

--- a/Q7/notebook/Jajiga.ipynb
+++ b/Q7/notebook/Jajiga.ipynb
@@ -19,26 +19,7 @@
       "metadata": {
         "id": "rJuhMbbHY7-f"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/opt/anaconda3/bin/python: No module named uv\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0:\tlearn: 0.0223989\ttest: 0.0227310\tbest: 0.0227310 (0)\ttotal: 299ms\tremaining: 59m 53s\n",
-            "300:\tlearn: 0.7279329\ttest: 0.6647918\tbest: 0.6647918 (300)\ttotal: 1m 13s\tremaining: 47m 39s\n",
-            "600:\tlearn: 0.8307353\ttest: 0.7318901\tbest: 0.7318901 (600)\ttotal: 2m 26s\tremaining: 46m 21s\n",
-            "900:\tlearn: 0.8806726\ttest: 0.7505599\tbest: 0.7505751 (896)\ttotal: 3m 32s\tremaining: 43m 42s\n",
-            "1200:\tlearn: 0.9116071\ttest: 0.7595681\tbest: 0.7595681 (1200)\ttotal: 4m 39s\tremaining: 41m 50s\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import os\n",
         "import ast\n",
@@ -55,6 +36,8 @@
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "RANDOM_STATE = 42\n",
+        "MAX_THREADS = os.cpu_count() or 8\n",
+        "FAST_MODE = True\n",
         "\n",
         "# Resolve directories robustly\n",
         "try:\n",
@@ -238,11 +221,12 @@
         "    ] if c in X.columns\n",
         "]\n",
         "\n",
-        "text_cols = [\n",
+        "text_cols_all = [\n",
         "    c for c in [\n",
         "        \"title\",\"description\",\"sleep_description\",\"types_text\",\"regions_text\",\"features_text\",\"rules_text\",\n",
         "    ] if c in X.columns\n",
         "]\n",
+        "text_cols = ([] if FAST_MODE else text_cols_all)\n",
         "\n",
         "selected_cols = [c for c in (numeric_cols + categorical_cols + text_cols) if c in X.columns]\n",
         "\n",
@@ -269,19 +253,20 @@
         "valid_pool = Pool(X_va, y_va_log, cat_features=cat_idx, text_features=text_idx)\n",
         "\n",
         "model = CatBoostRegressor(\n",
-        "    iterations=12000,\n",
-        "    learning_rate=0.03,\n",
-        "    depth=8,\n",
-        "    l2_leaf_reg=6.0,\n",
+        "    iterations=(20000 if FAST_MODE else 50000),\n",
+        "    learning_rate=(0.04 if FAST_MODE else 0.035),\n",
+        "    depth=(30 if FAST_MODE else 50),\n",
+        "    l2_leaf_reg=(8.0 if FAST_MODE else 10.0),\n",
         "    loss_function=\"RMSE\",\n",
         "    eval_metric=\"R2\",\n",
-        "    subsample=0.8,\n",
-        "    rsm=0.9,\n",
+        "    subsample=0.85,\n",
+        "    rsm=(0.7 if FAST_MODE else 0.6),\n",
         "    random_seed=RANDOM_STATE,\n",
         "    allow_writing_files=False,\n",
         "    od_type=\"Iter\",\n",
-        "    od_wait=900,\n",
-        "    verbose=300,\n",
+        "    od_wait=(700 if FAST_MODE else 900),\n",
+        "    verbose=200,\n",
+        "    thread_count=MAX_THREADS,\n",
         ")\n",
         "\n",
         "model.fit(train_pool, eval_set=valid_pool, use_best_model=True)\n",
@@ -306,15 +291,16 @@
         "full_pool = Pool(X_full, np.log1p(y), cat_features=cat_idx, text_features=text_idx)\n",
         "final_model = CatBoostRegressor(\n",
         "    iterations=int(best_it),\n",
-        "    learning_rate=0.03,\n",
-        "    depth=8,\n",
-        "    l2_leaf_reg=6.0,\n",
+        "    learning_rate=(0.06 if FAST_MODE else 0.035),\n",
+        "    depth=(6 if FAST_MODE else 8),\n",
+        "    l2_leaf_reg=(4.0 if FAST_MODE else 6.0),\n",
         "    loss_function=\"RMSE\",\n",
-        "    subsample=0.8,\n",
-        "    rsm=0.9,\n",
+        "    subsample=0.85,\n",
+        "    rsm=(0.95 if FAST_MODE else 0.9),\n",
         "    random_seed=RANDOM_STATE,\n",
         "    allow_writing_files=False,\n",
         "    verbose=False,\n",
+        "    thread_count=MAX_THREADS,\n",
         ")\n",
         "final_model.fit(full_pool)\n",
         "\n",
