Update startup and Jajiga notebooks: modify execution counts, enhance output messages, and adjust model parameters for improved performance and clarity.

--- a/Q6/startup/startup.ipynb
+++ b/Q6/startup/startup.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,9 @@
       "rf CV macro F1: 0.4811 ± 0.0066\n",
       "et CV macro F1: 0.4942 ± 0.0048\n",
       "hgb CV macro F1: 0.4722 ± 0.0078\n",
-      "stacking CV macro F1: 0.4986 ± 0.0088\n"
+      "stacking CV macro F1: 0.4986 ± 0.0088\n",
+      "voting_soft CV macro F1: 0.5267 ± 0.0070\n",
+      "Selected best model: voting_soft; Holdout macro F1: 0.5254\n"
      ]
     }
    ],
@@ -543,9 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation macro F1 (best model): 0.5254\n"
+     ]
+    }
+   ],
    "source": [
     "# evaluate your model\n",
     "y_valid_pred = model.predict(X_valid)\n",
@@ -555,9 +565,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using voting_soft for final training on full data\n",
+      "Submission: (8752, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   status\n",
+       "0       1\n",
+       "1       2\n",
+       "2       1\n",
+       "3       1\n",
+       "4       1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate predictions on test data and build submission\n",
     "print(f'Using {best_model_name} for final training on full data')\n",
@@ -573,9 +654,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Paths:\n",
+      "['startup.ipynb', 'submission.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "import zipfile\n",
     "\n",
