--- a/Q7/notebook/Jajiga.ipynb
+++ b/Q7/notebook/Jajiga.ipynb
@@ -19,7 +19,25 @@
       "metadata": {
         "id": "rJuhMbbHY7-f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0:\tlearn: 0.0278019\ttest: 0.0281346\tbest: 0.0281346 (0)\ttotal: 4.28ms\tremaining: 1m 25s\n",
+            "200:\tlearn: 0.7139532\ttest: 0.6257805\tbest: 0.6257805 (200)\ttotal: 710ms\tremaining: 1m 9s\n",
+            "400:\tlearn: 0.7980268\ttest: 0.6550087\tbest: 0.6550087 (400)\ttotal: 1.37s\tremaining: 1m 7s\n",
+            "600:\tlearn: 0.8513939\ttest: 0.6658825\tbest: 0.6658825 (600)\ttotal: 2.04s\tremaining: 1m 5s\n",
+            "800:\tlearn: 0.8876937\ttest: 0.6686367\tbest: 0.6687881 (794)\ttotal: 2.75s\tremaining: 1m 5s\n",
+            "1000:\tlearn: 0.9144385\ttest: 0.6705398\tbest: 0.6705811 (999)\ttotal: 3.45s\tremaining: 1m 5s\n",
+            "1200:\tlearn: 0.9323699\ttest: 0.6720364\tbest: 0.6730269 (1108)\ttotal: 4.12s\tremaining: 1m 4s\n",
+            "1400:\tlearn: 0.9463018\ttest: 0.6727193\tbest: 0.6730269 (1108)\ttotal: 4.82s\tremaining: 1m 4s\n",
+            "1600:\tlearn: 0.9571076\ttest: 0.6737674\tbest: 0.6738267 (1599)\ttotal: 5.5s\tremaining: 1m 3s\n",
+            "1800:\tlearn: 0.9651906\ttest: 0.6737151\tbest: 0.6741428 (1753)\ttotal: 6.17s\tremaining: 1m 2s\n",
+            "2000:\tlearn: 0.9722151\ttest: 0.6743980\tbest: 0.6744128 (1999)\ttotal: 6.86s\tremaining: 1m 1s\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import ast\n",
@@ -253,18 +271,18 @@
         "valid_pool = Pool(X_va, y_va_log, cat_features=cat_idx, text_features=text_idx)\n",
         "\n",
         "model = CatBoostRegressor(\n",
-        "    iterations=(20000 if FAST_MODE else 50000),\n",
+        "    iterations=(20000 if FAST_MODE else 8000),\n",
         "    learning_rate=(0.04 if FAST_MODE else 0.035),\n",
-        "    depth=(30 if FAST_MODE else 50),\n",
-        "    l2_leaf_reg=(8.0 if FAST_MODE else 10.0),\n",
+        "    depth=(8 if FAST_MODE else 12),\n",
+        "    l2_leaf_reg=(4.0 if FAST_MODE else 6.0),\n",
         "    loss_function=\"RMSE\",\n",
         "    eval_metric=\"R2\",\n",
         "    subsample=0.85,\n",
-        "    rsm=(0.7 if FAST_MODE else 0.6),\n",
+        "    rsm=(0.9 if FAST_MODE else 0.8),\n",
         "    random_seed=RANDOM_STATE,\n",
         "    allow_writing_files=False,\n",
         "    od_type=\"Iter\",\n",
-        "    od_wait=(700 if FAST_MODE else 900),\n",
+        "    od_wait=(500 if FAST_MODE else 700),\n",
         "    verbose=200,\n",
         "    thread_count=MAX_THREADS,\n",
         ")\n",
